# Lab_3_OOP_CPP

./: CMakeLists.txt  README.md  main.cpp
include/: array_of_figures.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
src/: array_of_figures.cpp  figure.cpp  hexagon.cpp  octagon.cpp  pentagon.cpp  point.cpp
tests/: test_array_of_figures.cpp  test_hexagon.cpp  test_octagon.cpp  test_pentagon.cpp  test_point.cpp
